--- a/Presentation.Mvc/ClientApp/src/app/titleBar/titlebar.component.html
+++ b/Presentation.Mvc/ClientApp/src/app/titleBar/titlebar.component.html
@@ -1,3 +1,5 @@
-<div>
-  <span>Correct It</span>
-</div>
+<nav class="navbar navbar-default sticky-top navbar-expand-lg navbar-light bg-info">
+  <div class="navbar-header">
+    <a class="navbar-brand navbar-text font-weight-bolder text-light">Correct It</a>
+  </div>
+</nav>
