--- a/Presentation.Mvc/ClientApp/src/app/app.component.html
+++ b/Presentation.Mvc/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
-  <div class="container">
+  <div class="container-xl">
     <app-titleBar></app-titleBar>
+    <app-navBar></app-navBar>
     <router-outlet></router-outlet>
   </div>
 </body>
