--- a/Presentation.Mvc/ClientApp/src/styles.css
+++ b/Presentation.Mvc/ClientApp/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
+
 a {
   color: #0366d6;
 }
